--- a/src/main/resources/GUI/hello-view.fxml
+++ b/src/main/resources/GUI/hello-view.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="GUI.HelloController">
     <padding>
@@ -13,4 +15,11 @@
 
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <TableView id="TableView" fx:id="mainTable" prefHeight="336.0" prefWidth="595.0">
+        <columns>
+            <TableColumn fx:id="columnFIO" prefWidth="200.0" text="ФИО" />
+            <TableColumn fx:id="columnDateBirthday" prefWidth="100.0" text="Дата Рождения" />
+            <TableColumn fx:id="columnAddress" prefWidth="290.0" text="Адресс" />
+        </columns>
+    </TableView>
 </VBox>
