--- a/src/main/resources/GUI/hello-view.fxml
+++ b/src/main/resources/GUI/hello-view.fxml
@@ -1,26 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.text.Font?>
+
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="GUI.HelloController">
+      fx:controller="GUI.HelloController"
+      minWidth="600"
+      minHeight="400">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
-
-    <TableView id="TableView" fx:id="doctorTable" prefHeight="340.0" prefWidth="600.0">
+    <TableView stylesheets="@main-view.css" id="TableView" fx:id="doctorTable" prefHeight="340.0" prefWidth="600.0" maxWidth="960">
         <columns>
             <TableColumn fx:id="txtDoctorName" prefWidth="400.0" text="ФИО доктора" />
             <TableColumn fx:id="txtSpecialist" prefWidth="300.0" text="Специальность" />
             <TableColumn fx:id="datDoctorWork" prefWidth="255.0" text="Дата приема на работу" />
         </columns>
     </TableView>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+
+    <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddDoctorButtonClick" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить доктора" textAlignment="CENTER" textFill="WHITE">
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+            <font>
+                <Font name="System Bold Italic" size="16.0" />
+            </font>
+        </Button>
+        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onCancelButtonClick" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Отмена" textAlignment="CENTER" textFill="WHITE">
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+            <font>
+                <Font name="System Bold Italic" size="16.0" />
+            </font>
+        </Button>
+    </HBox>
 </VBox>
