--- a/src/main/resources/GUI/doctor-view.fxml
+++ b/src/main/resources/GUI/doctor-view.fxml
@@ -10,15 +10,23 @@
 <?import javafx.scene.layout.HBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="GUI.HelloController"
+      fx:controller="GUI.DoctorController"
       minWidth="600"
       minHeight="400">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
+    <TableView stylesheets="@main-view.css" id="TableView" fx:id="doctorTable" prefHeight="340.0" prefWidth="600.0" maxWidth="960">
+        <columns>
+            <TableColumn fx:id="txtDoctorName" prefWidth="400.0" text="ФИО доктора" />
+            <TableColumn fx:id="txtSpecialist" prefWidth="300.0" text="Специальность" />
+            <TableColumn fx:id="datDoctorWork" prefWidth="255.0" text="Дата приема на работу" />
+        </columns>
+    </TableView>
+
     <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
-        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onOpenDoctorForm" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Открыть Доктора" textAlignment="CENTER" textFill="WHITE">
+        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddDoctorButtonClick" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить доктора" textAlignment="CENTER" textFill="WHITE">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
@@ -26,7 +34,7 @@
                 <Font name="System Bold Italic" size="16.0" />
             </font>
         </Button>
-        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onOpenAppointmentForm" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Открыть Приемы" textAlignment="CENTER" textFill="WHITE">
+        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onCancelButtonClick" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Отмена" textAlignment="CENTER" textFill="WHITE">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
