--- a/src/main/resources/GUI/new-doctor.fxml
+++ b/src/main/resources/GUI/new-doctor.fxml
@@ -10,21 +10,12 @@
 <?import javafx.scene.layout.HBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="GUI.NewDoctorController"
       minWidth="600"
       minHeight="400">
-<!--      fx:controller="GUI.DoctorController"-->
-
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-
-    <TableView stylesheets="@main-view.css" id="TableView" fx:id="doctorTable" prefHeight="340.0" prefWidth="600.0" maxWidth="960">
-        <columns>
-            <TableColumn fx:id="txtDoctorName" prefWidth="400.0" text="ФИО доктора" />
-            <TableColumn fx:id="txtSpecialist" prefWidth="300.0" text="Специальность" />
-            <TableColumn fx:id="datDoctorWork" prefWidth="255.0" text="Дата приема на работу" />
-        </columns>
-    </TableView>
 
     <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
         <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddDoctorButtonClick" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить доктора" textAlignment="CENTER" textFill="WHITE">
