--- a/src/main/resources/GUI/new-doctor.fxml
+++ b/src/main/resources/GUI/new-doctor.fxml
@@ -3,22 +3,48 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.VBox?>
 
+
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.HBox?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.DatePicker?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="GUI.NewDoctorController"
       minWidth="600"
       minHeight="400">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
+    <GridPane>
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+        <children>
+            <Label text="ФИО доктора" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+            <TextField fx:id="textFieldDoctorName" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+
+            <Label text="Специальность" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+            <TextField fx:id="textFieldSpecial" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+
+            <Label text="Дата приема на работу" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+            <DatePicker fx:id="dataPickerWork" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+        </children>
+    </GridPane>
+
     <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
-        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddDoctorButtonClick" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить доктора" textAlignment="CENTER" textFill="WHITE">
+        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddDoctor" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить доктора" textAlignment="CENTER" textFill="WHITE">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
