--- a/src/main/resources/GUI/reception-view.fxml
+++ b/src/main/resources/GUI/reception-view.fxml
@@ -14,6 +14,8 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       minWidth="600"
       minHeight="400">
@@ -21,7 +23,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <GridPane>
+    <GridPane style="-fx-border-color: black; -fx-border-width: 1;">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -42,6 +44,14 @@
             <Label fx:id="lblDataWork" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         </children>
     </GridPane>
+
+<!--    <TableView stylesheets="@main-view.css" id="TableView" fx:id="approintmentTable" prefHeight="400.0" prefWidth="600.0" maxWidth="960" onMouseClicked="#handleClick">-->
+<!--        <columns>-->
+<!--            <TableColumn fx:id="txtDoctorName" prefWidth="400.0" text="ФИО доктора" />-->
+<!--            <TableColumn fx:id="txtSpecialist" prefWidth="300.0" text="Специальность" />-->
+<!--            <TableColumn fx:id="datDoctorWork" prefWidth="240.0" text="Дата приема на работу" />-->
+<!--        </columns>-->
+<!--    </TableView>-->
 
 <!--    <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">-->
 <!--        <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddApproinment" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить доктора" textAlignment="CENTER" textFill="WHITE">-->
