--- a/src/main/resources/GUI/doctor-view.fxml
+++ b/src/main/resources/GUI/doctor-view.fxml
@@ -16,7 +16,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <TableView stylesheets="@main-view.css" id="TableView" fx:id="doctorTable" prefHeight="400.0" prefWidth="600.0" maxWidth="960" onMouseClicked="#handleClick">
+    <TableView stylesheets="@main-view.css" id="TableView" fx:id="doctorTable" prefWidth="600.0" onKeyPressed="#handleClick">
         <columns>
             <TableColumn fx:id="txtDoctorName" prefWidth="400.0" text="ФИО доктора" />
             <TableColumn fx:id="txtSpecialist" prefWidth="300.0" text="Специальность" />
