--- a/src/main/resources/GUI/new-reception.fxml
+++ b/src/main/resources/GUI/new-reception.fxml
@@ -9,13 +9,15 @@
 <?import javafx.scene.layout.HBox?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.ComboBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       minWidth="600"
       minHeight="400">
@@ -37,23 +39,42 @@
             <Label text="ФИО доктора" GridPane.rowIndex="0" GridPane.columnIndex="0" styleClass="labels"/>
             <Label fx:id="lblDoctorName" GridPane.rowIndex="0" GridPane.columnIndex="1" styleClass="values"/>
 
-            <Label text="Специальность" GridPane.rowIndex="1" GridPane.columnIndex="0" styleClass="labels" />
-            <Label fx:id="lblSpecial" GridPane.rowIndex="1" GridPane.columnIndex="1" styleClass="values"/>
+            <Separator GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.columnSpan="2" prefHeight="2.0" styleClass="separator"/>
 
-            <Label text="Дата приема на работу" GridPane.rowIndex="2" GridPane.columnIndex="0" styleClass="labels" />
-            <Label fx:id="lblDataWork" GridPane.rowIndex="2" GridPane.columnIndex="1" styleClass="values"/>
+            <Label text="Специальность" GridPane.rowIndex="2" GridPane.columnIndex="0" styleClass="labels" />
+            <Label fx:id="lblSpecial" GridPane.rowIndex="2" GridPane.columnIndex="1" styleClass="values"/>
         </children>
     </GridPane>
 
-    <TableView stylesheets="@reception.css" id="TableView" fx:id="receptionTable" prefWidth="600.0">
-        <columns>
-            <TableColumn fx:id="txtReceptionDate" prefWidth="100.0" text="Дата приема"/>
-            <TableColumn fx:id="txtReceptionTime" prefWidth="100.0" text="Время приема" />
-            <TableColumn fx:id="txtReceptionRoom" prefWidth="100.0" text="Номер кабинета" />
-            <TableColumn fx:id="txtPatientFullName" prefWidth="400.0" text="Фамилия и имя пациента" />
-            <TableColumn fx:id="txtReceptionResult" prefWidth="600.0" text="Заключение" />
-        </columns>
-    </TableView>
+    <GridPane>
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+        <children>
+            <Label text="Пациент" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+            <ComboBox fx:id="txtPatientName" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+
+            <Label text="Дата приема" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+            <DatePicker fx:id="txtReceptionDate" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+
+            <Label text="Время приема" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+            <TextField fx:id="txtReceptionTime" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+            <Label text="Кабинет" GridPane.rowIndex="3" GridPane.columnIndex="0" />
+            <ComboBox fx:id="txtReceptionRoom" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+            <Label text="Заключение" GridPane.rowIndex="4" GridPane.columnIndex="0" />
+            <TextField fx:id="txtReceptionResult" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+        </children>
+    </GridPane>
 
     <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
         <Button HBox.hgrow="ALWAYS" alignment="CENTER" maxWidth="Infinity" mnemonicParsing="false" onAction="#onAddReception" style="-fx-background-color: #3A98B9; -fx-background-radius: 10;" text="Добавить прием" textAlignment="CENTER" textFill="WHITE">
