--- a/src/main/resources/GUI/new-doctor.fxml
+++ b/src/main/resources/GUI/new-doctor.fxml
@@ -21,8 +21,10 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <GridPane>
+    <GridPane stylesheets="@reception.css" style="-fx-border-color: black; -fx-border-width: 1; -fx-padding: 10px;" styleClass="grid-pane2">
     <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
@@ -32,14 +34,14 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
         <children>
-            <Label text="ФИО доктора" GridPane.rowIndex="0" GridPane.columnIndex="0" />
-            <TextField fx:id="textFieldDoctorName" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+            <Label text="ФИО доктора" GridPane.rowIndex="0" GridPane.columnIndex="1" styleClass="values" />
+            <TextField fx:id="textFieldDoctorName" GridPane.rowIndex="0" GridPane.columnIndex="2" />
 
-            <Label text="Специальность" GridPane.rowIndex="1" GridPane.columnIndex="0" />
-            <TextField fx:id="textFieldSpecial" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+            <Label text="Специальность" GridPane.rowIndex="1" GridPane.columnIndex="1" styleClass="values" />
+            <TextField fx:id="textFieldSpecial" GridPane.rowIndex="1" GridPane.columnIndex="2" />
 
-            <Label text="Дата приема на работу" GridPane.rowIndex="2" GridPane.columnIndex="0" />
-            <DatePicker fx:id="dataPickerWork" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <Label text="Дата приема на работу" GridPane.rowIndex="2" GridPane.columnIndex="1" styleClass="values" />
+            <DatePicker fx:id="dataPickerWork" GridPane.rowIndex="2" GridPane.columnIndex="2"/>
         </children>
     </GridPane>
 
