--- a/src/main/resources/GUI/reception-view.fxml
+++ b/src/main/resources/GUI/reception-view.fxml
@@ -23,7 +23,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <GridPane stylesheets="@reception.css" style="-fx-border-color: black; -fx-border-width: 1;" styleClass="grid-pane">
+    <GridPane stylesheets="@reception.css" style="-fx-border-color: black; -fx-border-width: 1; -fx-padding: 10px;" styleClass="grid-pane">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
